noun/.nodeshift/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: noun
spec:
  template:
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
